--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login/Signup/Change Password</title>
+  <title>ATS Login/Signup/Change Password</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="https://img.freepik.com/premium-psd/padlock-open-isolated-3d-transparent-background_503253-150.jpg?w=740" type="image/png">
   <style media="screen">
