--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <div id="login-container" class="container">
     <div class="image-container"></div>
     <div class="form-container">
-      <h2>Login</h2>
+      <h2>Venkatesh</h2>
       <!-- Notification in Login Form -->
       <div id="login-notification" class="notification">Logged in successfully!</div>
       <div id="login-error" class="error">Wrong email/password! Please try again.</div>
